pulumi-projects/k8s/manifests/dreadnought/kiali-cr.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kiali-ui
  namespace: istio-system
spec:
  parentRefs:
    - name: istio-gateway  
      namespace: istio-system
  hostnames: ["homelab.home.arpa"]
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /kiali
      backendRefs:
        - name: kiali
          port: 20001
